Added solution to #2, submitting

--- a/ubuntu/assignment/first/02/02.md
+++ b/ubuntu/assignment/first/02/02.md
@@ -1,3 +1,5 @@
+**ID: 201103018 Dept: Computer Science**
+
 The code:
 
 ```c
@@ -9,3 +11,13 @@ Has two semantic errors in it. Viz:
 
 1. The loop has no proper way of reaching completion as z will always be greater than 100, leading to an infinite loop.
 2. This is becuase z never decreases so we're actually calculating a running sum of 100s.
+
+A solution to that is to decrease z so the loop reaches completion eventually
+
+```c
+    while (z >= 0)
+    {
+        sum += z;
+        z--;
+    }
+```
