--- a/ubuntu/assignment/first/03/03.md
+++ b/ubuntu/assignment/first/03/03.md
@@ -1,4 +1,7 @@
+**ID: 201103018 Dept: Computer Science**
+
 ## Psuedocode for a
+
 ```
 1. start
 2. let n1,n2
@@ -7,35 +10,36 @@
 5. print "the sum is " sum
 6. end
 ```
+
 ## Pseudocode for b
+
 <!-- pseudocode isn't strongly typed, hehe -->
+
 ```
 1. start
-2. let n1, n2 and x
+2. let n1, n2 and largest
 3. enter n1 and n2
-4. if n1 > n2 , skip to line 8
-5. if n2 > n1 , skip to line 10
-6. x = "neither of the two is greater, the numbers are equal"
-7. skip to line 11
-8. x = n1
-9. skip to line 11
-10. x = n2
-11. print x
-12. end
+4. if n1 is equal to n2 , largest = "neither of the two is greater, the numbers are equal"
+5. if n1 > n2 , largest = n1
+6. if n2 > n1 , largest = n2
+7. print largest
+8. end
+
 ```
 
 ## pseudocode for c
+
 ```
 1. start
 2. let x, sum
 3. sum = 0
 4. enter x
-5. if x >= 1, skip to line 9
-6. if x = -1 , skip to line 11
-7. if x < 1 , print You can only enter positive numbers
-8. return to line 4
+5. if x >= 1, go to line 9
+6. if x = -1 , go to line 11
+7. if x < 1 , print "You can only enter positive numbers"
+8. go to line 4
 9. sum = sum + x
-10. return to line 4
+10. go to line 4
 11. print sum
 12. end
 ```
